--- a/img.html
+++ b/img.html
@@ -52,6 +52,7 @@
     
 </head>
 <body>
+  <a href="hey.html">open me</a>
   <div class="latest">hi hi hi hi hi hi hi hi hi Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias modi voluptatum, quasi magni dignissimos quam? Dolorem blanditiis corporis voluptatum inventore nostrum culpa ducimus ad nam officia. Veritatis iusto eligendi illo.</div>
     <header>
         
